--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -9,7 +9,7 @@
   font-weight: 400;
 }
 .input > input {
-  width: 80%;
+  width: 100%;
   background: none;
   color: #fff;
   border: none;
